{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 304,
  "lineage": "b617024e-307c-c915-dbfc-672f77a56d7f",
  "resources": [
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272622178:security-group/sg-04c4bee7e9e002546",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-04c4bee7e9e002546",
            "ingress": [],
            "name": "test-altair20230628155525056800000001",
            "name_prefix": "test-altair",
            "owner_id": "026272622178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-altair"
            },
            "tags_all": {
              "Name": "SG-altair"
            },
            "timeouts": null,
            "vpc_id": "vpc-0341bc3af8d1c7908"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272622178:security-group/sg-0851cd39f7fed327c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0851cd39f7fed327c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-worker-sg-mgmt20230628155525057300000002",
            "name_prefix": "test-worker-sg-mgmt",
            "owner_id": "026272622178",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0341bc3af8d1c7908"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4027273759",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04c4bee7e9e002546",
            "security_group_rule_id": "sgr-0c7122cfa19046c28",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}